tests/ui/privacy/private-method.stderr
error[E0624]: associated function `nap` is private
  --> $DIR/private-method.rs:22:8
   |
LL |         fn nap(&self) {}
   |         ------------- private associated function defined here
...
LL |   nyan.nap();
   |        ^^^ private associated function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
